--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/hint.css/hint.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css styles/app.css -->
