mobile stuff works

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="bower_components/hint.css/hint.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css styles/app.css -->
+    <!-- build:css({app,.tmp}) styles/app.css -->
     <link rel="stylesheet" href="styles/app.css">
     <!-- endbuild -->
 </head>
